Fixing weird overflow issue:

--- a/src/components/pages/InsideView.scss
+++ b/src/components/pages/InsideView.scss
@@ -10,6 +10,7 @@
     &-main {
         flex: 3 0 0;
         margin-right: 30px;
+        overflow: auto;
 
         b,
         h1,
